<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.odsoftware.oddespesas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_despesa"
        android:name="com.odsoftware.oddespesas.ui.despesa.DespesaFragment"
        android:label="@string/menu_despesa"
        tools:layout="@layout/fragment_despesa" />

    <fragment
        android:id="@+id/nav_receita"
        android:name="com.odsoftware.oddespesas.ui.receita.ReceitaFragment"
        android:label="@string/menu_receita"
        tools:layout="@layout/fragment_receita" />
</navigation>